--- a/apache-mod_ssl.conf
+++ b/apache-mod_ssl.conf
@@ -1,4 +1,4 @@
-LoadModule ssl           lib/apache/mod_ssl.so 
+LoadModule ssl_module           lib/apache/mod_ssl.so 
 
 #
 # This is the Apache server configuration file providing SSL support.
