- protect using ifmodule
Changed files:
    apache-mod_ssl.conf -> 1.2.6.4

--- a/apache-mod_ssl.conf
+++ b/apache-mod_ssl.conf
@@ -1,5 +1,6 @@
 LoadModule ssl_module           lib/apache/mod_ssl.so 
 
+<IfModule mod_ssl.c>
 #
 # This is the Apache server configuration file providing SSL support.
 # It contains the configuration directives to instruct the server how to
@@ -263,3 +264,4 @@ CustomLog logs/ssl_request_log \
 </VirtualHost>                                  
 
 
+</IfModule>
