--- a/apache-mod_ssl.conf
+++ b/apache-mod_ssl.conf
@@ -125,16 +125,16 @@ SSLCipherSuite ALL:!ADH:!EXPORT56:RC4+RSA:+HIGH:+MEDIUM:+LOW:+SSLv2:+EXP:+eNULL
 #   built time. Keep in mind that if you've both a RSA and a DSA
 #   certificate you can configure both in parallel (to also allow
 #   the use of DSA ciphers, etc.)
-SSLCertificateFile /etc/ssl.crt/server.crt
-#SSLCertificateFile /etc/ssl.crt/server-dsa.crt
+SSLCertificateFile /etc/ssl/server.crt
+#SSLCertificateFile /etc/ssl/server-dsa.crt
 
 #   Server Private Key:
 #   If the key is not combined with the certificate, use this
 #   directive to point at the key file.  Keep in mind that if
 #   you've both a RSA and a DSA private key you can configure
 #   both in parallel (to also allow the use of DSA ciphers, etc.)
-SSLCertificateKeyFile /etc/ssl.key/server.key
-#SSLCertificateKeyFile /etc/ssl.key/server-dsa.key
+SSLCertificateKeyFile /etc/ssl/server.key
+#SSLCertificateKeyFile /etc/ssl/server-dsa.key
 
 #   Server Certificate Chain:
 #   Point SSLCertificateChainFile at a file containing the
@@ -143,7 +143,7 @@ SSLCertificateKeyFile /etc/ssl.key/server.key
 #   the referenced file can be the same as SSLCertificateFile
 #   when the CA certificates are directly appended to the server
 #   certificate for convinience.
-#SSLCertificateChainFile /etc/ssl.crt/ca.crt
+#SSLCertificateChainFile /etc/ssl/ca.crt
 
 #   Certificate Authority (CA):
 #   Set the CA certificate verification path where to find CA
@@ -152,8 +152,8 @@ SSLCertificateKeyFile /etc/ssl.key/server.key
 #   Note: Inside SSLCACertificatePath you need hash symlinks
 #         to point to the certificate files. Use the provided
 #         Makefile to update the hash symlinks after changes.
-#SSLCACertificatePath /etc/ssl.crt
-#SSLCACertificateFile /etc/ssl.crt/ca-bundle.crt
+#SSLCACertificatePath /etc/ssl
+#SSLCACertificateFile /etc/ssl/ca-bundle.crt
 
 #   Certificate Revocation Lists (CRL):
 #   Set the CA revocation path where to find CA CRLs for client
@@ -162,8 +162,8 @@ SSLCertificateKeyFile /etc/ssl.key/server.key
 #   Note: Inside SSLCARevocationPath you need hash symlinks
 #         to point to the certificate files. Use the provided
 #         Makefile to update the hash symlinks after changes.
-#SSLCARevocationPath /etc/ssl.crl
-#SSLCARevocationFile /etc/ssl.crl/ca-bundle.crl
+#SSLCARevocationPath /etc/ssl
+#SSLCARevocationFile /etc/ssl/ca-bundle.crl
 
 #   Client Authentication (Type):
 #   Client certificate verification type and depth.  Types are
