--- a/apache-mod_ssl.conf
+++ b/apache-mod_ssl.conf
@@ -60,7 +60,7 @@ SSLPassPhraseDialog  builtin
 #SSLSessionCache        none
 #SSLSessionCache        shmht:logs/ssl_scache(512000)
 #SSLSessionCache        shmcb:logs/ssl_scache(512000)
-SSLSessionCache         dbm:logs/ssl_scache
+SSLSessionCache         dbm:/var/log/httpd/ssl_scache
 SSLSessionCacheTimeout  300
 
 #   Semaphore:
@@ -92,7 +92,7 @@ SSLRandomSeed connect builtin
 #   a real server (i.e. somewhere where only root can write).
 #   Log levels are (ascending order: higher ones include lower ones):
 #   none, error, warn, info, trace, debug.
-SSLLog      logs/ssl_engine_log
+SSLLog      /var/log/httpd/ssl_engine_log
 SSLLogLevel info
 
 ##
@@ -125,16 +125,16 @@ SSLCipherSuite ALL:!ADH:!EXPORT56:RC4+RSA:+HIGH:+MEDIUM:+LOW:+SSLv2:+EXP:+eNULL
 #   built time. Keep in mind that if you've both a RSA and a DSA
 #   certificate you can configure both in parallel (to also allow
 #   the use of DSA ciphers, etc.)
-SSLCertificateFile /etc/ssl/server.crt
-#SSLCertificateFile /etc/ssl/server-dsa.crt
+SSLCertificateFile /etc/httpd/ssl/server.crt
+#SSLCertificateFile /etc/httpd/ssl/server-dsa.crt
 
 #   Server Private Key:
 #   If the key is not combined with the certificate, use this
 #   directive to point at the key file.  Keep in mind that if
 #   you've both a RSA and a DSA private key you can configure
 #   both in parallel (to also allow the use of DSA ciphers, etc.)
-SSLCertificateKeyFile /etc/ssl/server.key
-#SSLCertificateKeyFile /etc/ssl/server-dsa.key
+SSLCertificateKeyFile /etc/httpd/ssl/server.key
+#SSLCertificateKeyFile /etc/httpd/ssl/server-dsa.key
 
 #   Server Certificate Chain:
 #   Point SSLCertificateChainFile at a file containing the
@@ -143,7 +143,7 @@ SSLCertificateKeyFile /etc/ssl/server.key
 #   the referenced file can be the same as SSLCertificateFile
 #   when the CA certificates are directly appended to the server
 #   certificate for convinience.
-#SSLCertificateChainFile /etc/ssl/ca.crt
+#SSLCertificateChainFile /etc/httpd/ssl/ca.crt
 
 #   Certificate Authority (CA):
 #   Set the CA certificate verification path where to find CA
@@ -152,8 +152,8 @@ SSLCertificateKeyFile /etc/ssl/server.key
 #   Note: Inside SSLCACertificatePath you need hash symlinks
 #         to point to the certificate files. Use the provided
 #         Makefile to update the hash symlinks after changes.
-#SSLCACertificatePath /etc/ssl
-#SSLCACertificateFile /etc/ssl/ca-bundle.crt
+#SSLCACertificatePath /etc/httpd/ssl
+#SSLCACertificateFile /etc/httpd/ssl/ca-bundle.crt
 
 #   Certificate Revocation Lists (CRL):
 #   Set the CA revocation path where to find CA CRLs for client
@@ -162,8 +162,8 @@ SSLCertificateKeyFile /etc/ssl/server.key
 #   Note: Inside SSLCARevocationPath you need hash symlinks
 #         to point to the certificate files. Use the provided
 #         Makefile to update the hash symlinks after changes.
-#SSLCARevocationPath /etc/ssl
-#SSLCARevocationFile /etc/ssl/ca-bundle.crl
+#SSLCARevocationPath /etc/httpd/ssl
+#SSLCARevocationFile /etc/httpd/ssl/ca-bundle.crl
 
 #   Client Authentication (Type):
 #   Client certificate verification type and depth.  Types are
@@ -258,7 +258,7 @@ SetEnvIf User-Agent ".*MSIE.*" \
 #   Per-Server Logging:
 #   The home of a custom SSL log file. Use this when you want a
 #   compact non-error SSL logfile on a virtual host basis.
-CustomLog logs/ssl_request_log \
+CustomLog /var/log/httpd/ssl_request_log \
           "%t %h %{SSL_PROTOCOL}x %{SSL_CIPHER}x \"%r\" %b"
 
 </VirtualHost>                                  
