--- a/apache-mod_ssl.conf
+++ b/apache-mod_ssl.conf
@@ -1,4 +1,4 @@
-LoadModule ssl_module           lib/apache/mod_ssl.so 
+LoadModule ssl_module           modules/mod_ssl.so 
 
 <IfModule mod_ssl.c>
 #
