--- a/apache1-mod_ssl.conf
+++ b/apache1-mod_ssl.conf
@@ -1,4 +1,4 @@
-LoadModule ssl_module        lib/apache/libssl.so 
+LoadModule ssl_module        lib/apache1/libssl.so 
 AddModule mod_ssl.c
 
 ##--------------------------------------------------------------------------
@@ -64,19 +64,19 @@ SSLRandomSeed connect builtin
 #   a real server (i.e. somewhere where only root can write).
 #   Log levels are (ascending order: higher ones include lower ones):
 #   none, error, warn, info, trace, debug.
-SSLLog      /var/log/httpd/ssl_engine_log
+SSLLog      /var/log/apache/ssl_engine_log
 SSLLogLevel info
 
 <VirtualHost _default_:443>
 SSLEngine on
 #SSLCipherSuite ALL:!ADH:RC4+RSA:+HIGH:+MEDIUM:+LOW:+SSLv2:+EXP:+eNULL
-SSLCertificateFile /etc/httpd/server.crt
-SSLCertificateKeyFile /etc/httpd/server.key
-#SSLCertificateChainFile /etc/httpd/conf/ssl.crt/ca.crt
-#SSLCACertificatePath /etc/httpd/conf/ssl.crt
-#SSLCACertificateFile /etc/httpd/conf/ssl.crt/ca-bundle.crt
-#SSLCARevocationPath /etc/httpd/conf/ssl.crl
-#SSLCARevocationFile /etc/httpd/conf/ssl.crl/ca-bundle.crl
+SSLCertificateFile /etc/apache/server.crt
+SSLCertificateKeyFile /etc/apache/server.key
+#SSLCertificateChainFile /etc/apache/conf/ssl.crt/ca.crt
+#SSLCACertificatePath /etc/apache/conf/ssl.crt
+#SSLCACertificateFile /etc/apache/conf/ssl.crt/ca-bundle.crt
+#SSLCARevocationPath /etc/apache/conf/ssl.crl
+#SSLCARevocationFile /etc/apache/conf/ssl.crl/ca-bundle.crl
 #SSLVerifyClient require
 #SSLVerifyDepth  10
 
@@ -84,11 +84,11 @@ SSLCertificateKeyFile /etc/httpd/server.key
 <Files ~ "\.(cgi|shtml)$">
     SSLOptions +StdEnvVars
 </Files>
-<Directory "/home/services/httpd/html/cgi-bin">
+<Directory "/home/services/apache/html/cgi-bin">
     SSLOptions +StdEnvVars
 </Directory>
 SetEnvIf User-Agent ".*MSIE.*" nokeepalive ssl-unclean-shutdown
-CustomLog /var/log/httpd/ssl_request_log \
+CustomLog /var/log/apache/ssl_request_log \
           "%t %h %{SSL_PROTOCOL}x %{SSL_CIPHER}x \"%r\" %b"
 
 </VirtualHost>                                  
