- added Id cvs tag and vim modeline
Changed files:
    apache-mod_ssl.conf -> 1.9

--- a/apache-mod_ssl.conf
+++ b/apache-mod_ssl.conf
@@ -1,3 +1,4 @@
+# $Id$
 LoadModule ssl_module           modules/mod_ssl.so 
 
 <IfModule mod_ssl.c>
@@ -255,3 +256,4 @@ CustomLog /var/log/httpd/ssl_request_log \
 
 
 </IfModule>
+# vim: filetype=apache ts=4 sw=4 et
