--- a/apache1-mod_ssl.conf
+++ b/apache1-mod_ssl.conf
@@ -1,6 +1,6 @@
-LoadModule ssl_module        lib/apache1/libssl.so 
-AddModule mod_ssl.c
+LoadModule ssl_module        modules/libssl.so
 
+<IfModule mod_ssl.c>
 ##--------------------------------------------------------------------------
 ## Add additional SSL configuration directives which provide a
 ## robust default configuration: virtual server on port 443
@@ -9,7 +9,7 @@ AddModule mod_ssl.c
 ##
 ##  SSL Support
 ##
-##  When we also provide SSL we have to listen to the 
+##  When we also provide SSL we have to listen to the
 ##  standard HTTP port (see above) and to the HTTPS port
 ##
 Listen 443
@@ -44,11 +44,11 @@ SSLSessionCacheTimeout  300
 
 #   Semaphore:
 #   Configure the path to the mutual explusion semaphore the
-#   SSL engine uses internally for inter-process synchronization. 
+#   SSL engine uses internally for inter-process synchronization.
 SSLMutex  file:/var/run/ssl_mutex
 
 #   Pseudo Random Number Generator (PRNG):
-#   Configure one or more sources to seed the PRNG of the 
+#   Configure one or more sources to seed the PRNG of the
 #   SSL library. The seed data should be of good random quality.
 SSLRandomSeed startup builtin
 SSLRandomSeed connect builtin
@@ -64,7 +64,7 @@ SSLRandomSeed connect builtin
 #   a real server (i.e. somewhere where only root can write).
 #   Log levels are (ascending order: higher ones include lower ones):
 #   none, error, warn, info, trace, debug.
-SSLLog      /var/log/apache/ssl_engine_log
+SSLLog      logs/ssl_engine_log
 SSLLogLevel info
 
 <VirtualHost _default_:443>
@@ -88,7 +88,11 @@ SSLCertificateKeyFile /etc/apache/server.key
     SSLOptions +StdEnvVars
 </Directory>
 SetEnvIf User-Agent ".*MSIE.*" nokeepalive ssl-unclean-shutdown
-CustomLog /var/log/apache/ssl_request_log \
+CustomLog logs/ssl_request_log \
           "%t %h %{SSL_PROTOCOL}x %{SSL_CIPHER}x \"%r\" %b"
 
-</VirtualHost>                                  
+</VirtualHost>
+
+</IfModule>
+
+# vim: filetype=apache ts=4 sw=4 et
