- conditionals for module directives
Changed files:
    apache1-mod_ssl.conf -> 1.5

--- a/apache1-mod_ssl.conf
+++ b/apache1-mod_ssl.conf
@@ -87,9 +87,15 @@ SSLCertificateKeyFile /etc/apache/server.key
 <Directory "/home/services/apache/html/cgi-bin">
     SSLOptions +StdEnvVars
 </Directory>
+
+<IfModule mod_setenvif.c>
 SetEnvIf User-Agent ".*MSIE.*" nokeepalive ssl-unclean-shutdown
+</IfModule>
+
+<IfModule mod_log_config.c>
 CustomLog logs/ssl_request_log \
           "%t %h %{SSL_PROTOCOL}x %{SSL_CIPHER}x \"%r\" %b"
+</IfModule>
 
 </VirtualHost>
 
