- use logs/ symlink for log dirs
Changed files:
    apache-mod_ssl.conf -> 1.11

--- a/apache-mod_ssl.conf
+++ b/apache-mod_ssl.conf
@@ -75,8 +75,8 @@ SSLMutex  file:/var/run/ssl_mutex
 DocumentRoot "/home/services/httpd/html"
 ServerName www.example.com:443
 ServerAdmin you@example.com
-ErrorLog /var/log/httpd/error_log
-TransferLog /var/log/httpd/access_log
+ErrorLog logs/error_log
+TransferLog logs/access_log
 
 #   SSL Engine Switch:
 #   Enable/Disable SSL for this virtual host.
@@ -223,7 +223,7 @@ BrowserMatch ".*MSIE.*" \
 #   Per-Server Logging:
 #   The home of a custom SSL log file. Use this when you want a
 #   compact non-error SSL logfile on a virtual host basis.
-CustomLog /var/log/httpd/ssl_request_log \
+CustomLog logs/ssl_request_log \
           "%t %h %{SSL_PROTOCOL}x %{SSL_CIPHER}x \"%r\" %b"
 
 </VirtualHost>
