--- a/apache1-mod_ssl.conf
+++ b/apache1-mod_ssl.conf
@@ -1,4 +1,4 @@
-LoadModule ssl_module        modules/libssl.so
+LoadModule ssl_module		modules/libssl.so
 
 <IfModule mod_ssl.c>
 ##--------------------------------------------------------------------------
@@ -25,22 +25,22 @@ Listen 443
 #   Some MIME-types for downloading Certificates and CRLs
 #
 AddType application/x-x509-ca-cert .crt
-AddType application/x-pkcs7-crl    .crl
+AddType application/x-pkcs7-crl	.crl
 
 #   Pass Phrase Dialog:
 #   Configure the pass phrase gathering process.
 #   The filtering dialog program (`builtin' is a internal
 #   terminal dialog) has to provide the pass phrase on stdout.
-SSLPassPhraseDialog  builtin
+SSLPassPhraseDialog	builtin
 
 #   Inter-Process Session Cache:
 #   Configure the SSL Session Cache: First either `none'
 #   or `dbm:/path/to/file' for the mechanism to use and
 #   second the expiring timeout (in seconds).
-#SSLSessionCache        none
-#SSLSessionCache         dbm:logs/ssl_scache
-SSLSessionCache        shm:/var/run/ssl_scache(512000)
-SSLSessionCacheTimeout  300
+#SSLSessionCache		none
+#SSLSessionCache		 dbm:logs/ssl_scache
+SSLSessionCache		shm:/var/run/ssl_scache(512000)
+SSLSessionCacheTimeout	300
 
 #   Semaphore:
 #   Configure the path to the mutual explusion semaphore the
@@ -52,19 +52,19 @@ SSLMutex  file:/var/run/ssl_mutex
 #   SSL library. The seed data should be of good random quality.
 SSLRandomSeed startup builtin
 SSLRandomSeed connect builtin
-#SSLRandomSeed startup file:/dev/random  512
+#SSLRandomSeed startup file:/dev/random	512
 #SSLRandomSeed startup file:/dev/urandom 512
-#SSLRandomSeed connect file:/dev/random  512
+#SSLRandomSeed connect file:/dev/random	512
 #SSLRandomSeed connect file:/dev/urandom 512
 
 #   Logging:
 #   The home of the dedicated SSL protocol logfile. Errors are
-#   additionally duplicated in the general error log file.  Put
+#   additionally duplicated in the general error log file. Put
 #   this somewhere where it cannot be used for symlink attacks on
 #   a real server (i.e. somewhere where only root can write).
 #   Log levels are (ascending order: higher ones include lower ones):
 #   none, error, warn, info, trace, debug.
-SSLLog      logs/ssl_engine_log
+SSLLog	logs/ssl_engine_log
 SSLLogLevel info
 
 <VirtualHost _default_:443>
@@ -78,27 +78,24 @@ SSLCertificateKeyFile /etc/apache/server.key
 #SSLCARevocationPath /etc/apache/conf/ssl.crl
 #SSLCARevocationFile /etc/apache/conf/ssl.crl/ca-bundle.crl
 #SSLVerifyClient require
-#SSLVerifyDepth  10
+#SSLVerifyDepth	10
 
 #SSLOptions +FakeBasicAuth +ExportCertData +CompatEnvVars +StrictRequire
 <Files ~ "\.(cgi|shtml)$">
-    SSLOptions +StdEnvVars
+	SSLOptions +StdEnvVars
 </Files>
 <Directory "/home/services/apache/html/cgi-bin">
-    SSLOptions +StdEnvVars
+	SSLOptions +StdEnvVars
 </Directory>
 
 <IfModule mod_setenvif.c>
-SetEnvIf User-Agent ".*MSIE.*" nokeepalive ssl-unclean-shutdown
+	SetEnvIf User-Agent ".*MSIE.*" nokeepalive ssl-unclean-shutdown
 </IfModule>
 
 <IfModule mod_log_config.c>
-CustomLog logs/ssl_request_log \
-          "%t %h %{SSL_PROTOCOL}x %{SSL_CIPHER}x \"%r\" %b"
+	CustomLog logs/ssl_request_log "%t %h %{SSL_PROTOCOL}x %{SSL_CIPHER}x \"%r\" %b"
 </IfModule>
 
 </VirtualHost>
 
 </IfModule>
-
-# vim: filetype=apache ts=4 sw=4 et
