--- a/apache-mod_ssl.conf
+++ b/apache-mod_ssl.conf
@@ -56,14 +56,15 @@ SSLPassPhraseDialog  builtin
 #   Inter-Process Session Cache:
 #   Configure the SSL Session Cache: First the mechanism
 #   to use and second the expiring timeout (in seconds).
-#SSLSessionCache		 dbm:/var/run/ssl_scache
-SSLSessionCache		shmcb:/var/run/ssl_scache(512000)
+#SSLSessionCache		 dbm:/var/cache/httpd/ssl_scache
+#SSLSessionCache		shmcb:/var/run/ssl_scache(512000)
+SSLSessionCache		shmcb:/var/cache/httpd/ssl_scache(512000)
 SSLSessionCacheTimeout  300
 
 #   Semaphore:
 #   Configure the path to the mutual exclusion semaphore the
 #   SSL engine uses internally for inter-process synchronization.
-SSLMutex  file:/var/run/ssl_mutex
+SSLMutex  file:/var/run/httpd/ssl_mutex
 
 ##
 ## SSL Virtual Host Context
