--- a/apache-mod_ssl.conf
+++ b/apache-mod_ssl.conf
@@ -211,14 +211,16 @@ SSLCertificateKeyFile /etc/httpd/ssl/server.key
 #   Similarly, one has to force some clients to use HTTP/1.0 to workaround
 #   their broken HTTP/1.1 implementation. Use variables "downgrade-1.0" and
 #   "force-response-1.0" for this.
-BrowserMatch ".*MSIE.*" \
-		 nokeepalive ssl-unclean-shutdown \
-		 downgrade-1.0 force-response-1.0
+<IfModule mod_setenvif.c>
+	BrowserMatch ".*MSIE.*" nokeepalive ssl-unclean-shutdown downgrade-1.0 force-response-1.0
+</IfModule>
 
 #   Per-Server Logging:
 #   The home of a custom SSL log file. Use this when you want a
 #   compact non-error SSL logfile on a virtual host basis.
-CustomLog logs/ssl_request_log "%t %h %{SSL_PROTOCOL}x %{SSL_CIPHER}x \"%r\" %b"
+<IfModule mod_log_config.c>
+	CustomLog logs/ssl_request_log "%t %h %{SSL_PROTOCOL}x %{SSL_CIPHER}x \"%r\" %b"
+</IfModule>
 
 </VirtualHost>
 
