- disable ssl_request_log, leave note that enabling it would override default accesslog
Changed files:
    apache-mod_ssl.conf -> 1.18
    apache1-mod_ssl.conf -> 1.8

--- a/apache1-mod_ssl.conf
+++ b/apache1-mod_ssl.conf
@@ -86,9 +86,11 @@ SSLCertificateKeyFile /etc/apache/server.key
 	SetEnvIf User-Agent ".*MSIE.*" nokeepalive ssl-unclean-shutdown
 </IfModule>
 
-<IfModule mod_log_config.c>
-	CustomLog logs/ssl_request_log "%t %h %{SSL_PROTOCOL}x %{SSL_CIPHER}x \"%r\" %b"
-</IfModule>
+#<IfModule mod_log_config.c>
+#	CustomLog logs/ssl_request_log "%t %h %{SSL_PROTOCOL}x %{SSL_CIPHER}x \"%r\" %b"
+#	# enable common log too, otherwise you be suprised of no access logs
+#	CustomLog logs/access_log common
+#</IfModule>
 
 </VirtualHost>
 
