--- a/apache-mod_ssl.conf
+++ b/apache-mod_ssl.conf
@@ -210,9 +210,11 @@ SSLCertificateKeyFile /etc/httpd/ssl/server.key
 #   Per-Server Logging:
 #   The home of a custom SSL log file. Use this when you want a
 #   compact non-error SSL logfile on a virtual host basis.
-<IfModule mod_log_config.c>
-	CustomLog logs/ssl_request_log "%t %h %{SSL_PROTOCOL}x %{SSL_CIPHER}x \"%r\" %b"
-</IfModule>
+#<IfModule mod_log_config.c>
+#	CustomLog logs/ssl_request_log "%t %h %{SSL_PROTOCOL}x %{SSL_CIPHER}x \"%r\" %b"
+#	# enable common log too, otherwise you be suprised of no access logs
+#	CustomLog logs/access_log common
+#</IfModule>
 
 </VirtualHost>
 
