disable sslv2, sslv3

--- a/apache1-mod_ssl.conf
+++ b/apache1-mod_ssl.conf
@@ -36,6 +36,14 @@ SSLPassPhraseDialog	builtin
 SSLSessionCache		shm:/var/run/ssl_scache(512000)
 SSLSessionCacheTimeout	300
 
+# FOLLOW SECURE DEFAULTS: https://wiki.mozilla.org/Security/Server_Side_TLS
+
+#   Usable SSL protocol flavors:
+#   This directive can be used to control the SSL protocol flavors mod_ssl
+#   should use when establishing its server environment. Clients then can only
+#   connect with one of the provided protocols.
+SSLProtocol all -SSLv2 -SSLv3
+
 #   Semaphore:
 #   Configure the path to the mutual explusion semaphore the
 #   SSL engine uses internally for inter-process synchronization.
